<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Haus Rafael</string>

    <string name="menu_news">Neuigkeiten</string>
    <string name="menu_team">Team</string>
    <string name="menu_contact">Kontakt</string>
    <string name="menu_about_us">Über uns</string>
    <string name="menu_bus_connections">Busverbindungen</string>
    <string name="menu_google_maps">Google Maps</string>

    <string name="employee">Mitarbeiter</string>
    <string name="export_to_calendar">Als Kontakt exportieren</string>
    <string name="export_unsuccessful">Kontakt konnte nicht exportiert werden</string>
    <string name="copy_successful">Text wurde in die Zwischenablage kopiert</string>
    <string name="received">Empfangen</string>
    <string name="service_description">Empfängt Neuigkeiten und erzeugt Benachrichtigungen.</string>
    <string name="no_internet_connection">Keine Internetverbindung</string>

    <string name="company">Haus Rafael</string>
    <string name="phone">Telefonnummer</string>
    <string name="fax">Faxnummer</string>
    <string name="email">E-Mail Adresse</string>
    <string name="url">URL</string>
    <string name="location">Adresse</string>
    <string name="copy">Kopieren</string>
    <string name="message">Nachricht</string>

</resources>
